--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 					<!-- <p class="fragment twitter-handle" style="background: url(img/twitter.png) no-repeat left center; background-size: 50px; display: inline-block; padding-left: 50px;">@iamNavaneeth</p> -->
 					<p class="fragment">www.alchidesignstudio.com</p>
 				</section>
+				<section style="text-align: left;">
+					<h3>Your success is my success!</h3>
+					<p class="fragment">1. Open mind</p>
+					<p class="fragment">2. Trust the process</p>
+					<p class="fragment">3. Interactive + Collaborative</p>
+				</section>
 				<!-- <section>Designers?</section>
 				<section>Developers?</section> -->
 
@@ -208,6 +214,12 @@
 					<section data-background-size="contain" data-background-image="img/lc/9.png">
 					</section>
 					<section data-background-size="contain" data-background-image="img/lc/10.png">
+					</section>
+					<section style="text-align: left;">
+						<h1>#1 Proximity</h1>
+						<h1>#2 White space</h1>
+						<h1>#3 Alignment</h1>
+						<h1>#4 Contrast</h1>
 					</section>
 					<section>
 						<p>Any secret formula?!</p>
@@ -381,8 +393,11 @@
 						<p style="background: url(img/checked.png) no-repeat left center; background-size: 80px; padding-left: 80px;">7. Where the industry is going?</p>
 					</section>
 					<section>
-						<p><strong style="font-size: 1.5em;">www.navaneeth.in/SIH2019</strong></p>
+						<p><strong style="font-size: 1.5em;">www.navaneeth.in/design101</strong></p>
 						<br />
+						<p class="fragment linkedin-handle" style="background: url(img/linkedin.png) no-repeat left center; background-size: 50px; display: inline-block; padding-left: 60px;"> navaneethakrishna</p>
+						<br />
+						<p class="fragment twitter-handle" style="background: url(img/twitter.png) no-repeat left center; background-size: 50px; display: inline-block; padding-left: 50px;">@iamNavaneeth</p>
 						<p class="fragment">Thank you!</p>
 					</section>
 				</section>
