--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 					<section>
 						<p>Which BRAND has the BEST EXPERIENCE DESIGN??!</p>
 					</section>
-					<section data-background-size="contain" data-background-image="img/grandBrandRajini-min.png">
+					<section data-background-size="contain" data-background-image="img/rr_1_min.jpg">
 					</section>
 					<section>
 						<p>Is there a formula for XD like Golden Ratio for layouts?</p>
